@@ -3,6 +3,7 @@ package com.rabpit.backroom.core;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -17,7 +18,7 @@ public class GmNarrativePacketTest {
         Paths.get("android-apk/app/src/main/assets", relativePath)
     };
     for (Path path : candidates) {
-      if (Files.isRegularFile(path)) return Files.readString(path);
+      if (Files.isRegularFile(path)) return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
     }
     throw new IllegalStateException("Unable to locate test asset: " + relativePath);
   }
